[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["INFy93 <infy93@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fastapi = {extras = ["standart"], version = "^0.115.6"}
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
